Refactor dnsarc project structure and enhance functionality. Updated buf.gen.yaml for backend and frontend generation paths, modified Makefile to include frontend build and deployment commands, and added Redis support in the backend. Enhanced database migrations and integrated new dependencies for improved performance. Updated frontend Dockerfile and package configurations for better build management and added new routes and components for user authentication.

--- a/backend/k8s/dns/daemonset.yaml
+++ b/backend/k8s/dns/daemonset.yaml
@@ -27,12 +27,20 @@ spec:
               hostPort: 53
               protocol: TCP
               name: dns-tcp
+            - containerPort: 9090
+              protocol: TCP
+              name: connect-rpc
           env:
             - name: DATABASE_URL
               valueFrom:
                 secretKeyRef:
                   name: dnsarc-config
                   key: DATABASE_URL
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  name: dnsarc-config
+                  key: REDIS_URL
             - name: NS1
               valueFrom:
                 secretKeyRef:
