--- a/backend/k8s/api/deployment.yaml
+++ b/backend/k8s/api/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: dnsarc-api
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: dnsarc-api
@@ -30,9 +30,16 @@ spec:
                 secretKeyRef:
                   name: dnsarc-config
                   key: DATABASE_URL
+            - name: REDIS_URL
+              valueFrom:
+                secretKeyRef:
+                  name: dnsarc-config
+                  key: REDIS_URL
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
                   name: dnsarc-config
                   key: JWT_SECRET
+            
+          
 
