--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,15 +18,21 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
-        # 处理 React Router 的客户端路由
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        # 静态资源缓存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        # 静态资源缓存（放在前面，优先匹配）
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
+        
+        # 移除末尾斜杠的重定向（除了根路径）
+        location ~ ^(.+)/$ {
+            return 301 $1;
+        }
+        
+        # 处理 SSG 静态文件和路由
+        location / {
+            # 首先尝试直接文件，然后尝试.html扩展名，然后尝试目录下的index.html，最后回退到根index.html
+            try_files $uri $uri.html $uri/index.html /index.html;
+        }
     }
-} 
+}
