Integrate OpenAI API into DNS server for enhanced TXT record responses. Update Go modules and Kubernetes deployment to include necessary environment variables for OpenAI configuration.

--- a/backend/k8s/dns/deployment.yaml
+++ b/backend/k8s/dns/deployment.yaml
@@ -57,6 +57,16 @@ spec:
                 secretKeyRef:
                   name: dnsarc-config
                   key: MBOX
+            - name: OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: dnsarc-config
+                  key: OPENAI_API_KEY
+            - name: OPENAI_BASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: dnsarc-config
+                  key: OPENAI_BASE_URL
           securityContext:
             capabilities:
               add:
