fix: shorten Docker image tag to first 7 chars of git SHA and fix cache-to type

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -10,7 +10,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: dnsarc
-  VERSION: ${{ github.sha }}
+  VERSION: ${{ github.sha | slice(0, 7) }}
 
 jobs:
   build-and-push:
@@ -40,7 +40,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ github.sha }}
+            type=raw,value=${{ github.sha | slice(0, 7) }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -50,4 +50,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=ghac,mode=max
+          cache-to: type=gha,mode=max
